Updated the website, fixed doof more

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,4 +4,16 @@
 
 <div class="text-center">
     <h1 class="Homiebot Home">Homiebot says: why are you here?</h1>
+    <div class="container">
+        <div class="row">
+            <div class="span4"><a href='image/snek'><p>A Snek</p></a></div>
+            <div class="span4"><a href='gimmick/welp'><p>A Curse</p></a></div>
+            <div class="span4"><a href='image/trolly'><p>A Dilemma</p></a></div>
+        </div>
+        <div class="row">
+            <div class="span4"><a href='gimmick/truth'><p>Some Truth</p></a></div>
+            <div class="span4"><a href='gimmick/shapiro'><p>Some Lies</p></a></div>
+            <div class="span4"><a href='gimmick/mcafee'><p>Some Wisdom</p></a></div>
+        </div>  
+    </div>
 </div>
