--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="https://github.com/LogicalPhallacy/homiebot">Source</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="https://irestartpcs.com/">Help</a>
+                        </li>
                     </ul>
                 </div>
             </div>
