fix homiebot home page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,16 +4,18 @@
 
 <div class="text-center">
     <h1 class="Homiebot Home">Homiebot says: why are you here?</h1>
-    <div class="container">
-        <div class="row">
-            <div class="span4"><a href='image/snek'><p>A Snek</p></a></div>
-            <div class="span4"><a href='gimmick/welp'><p>A Curse</p></a></div>
-            <div class="span4"><a href='image/trolly'><p>A Dilemma</p></a></div>
+    <div class="row justify-content-center">
+        <div class="btn-group btn-group-justified" role="group" aria-label="...">
+            <a href='image/snek' class="btn btn-default btn-lg" role='button'>A Snek</a>
+            <a href='gimmick/welp' class="btn btn-default btn-lg" role='button'>A Curse</a>
+            <a href='image/trolly' class="btn btn-default btn-lg" role='button'>A Dilemma</a>    
         </div>
-        <div class="row">
-            <div class="span4"><a href='gimmick/truth'><p>Some Truth</p></a></div>
-            <div class="span4"><a href='gimmick/shapiro'><p>Some Lies</p></a></div>
-            <div class="span4"><a href='gimmick/mcafee'><p>Some Wisdom</p></a></div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="btn-group btn-group-justified" role="group" aria-label="...">
+            <a href='gimmick/truth' class="btn btn-default btn-lg" role='button'>Some Truth</a>
+            <a href='gimmick/shapiro' class="btn btn-default btn-lg" role='button'>Some Lies</a>
+            <a href='gimmick/mcafee' class="btn btn-default btn-lg" role='button'>Some Wisdom</a>
         </div>  
     </div>
 </div>
