fix image sizing

--- a/Views/Image/ImageView.cshtml
+++ b/Views/Image/ImageView.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="Homiebot">Behold</h1>
-    <img src="@Url.Action("ImageFile", "Image", new { name = Model.Name })" alt="@Model.AltText" />
+    <img class="img-fluid"  src="@Url.Action("ImageFile", "Image", new { name = Model.Name })" alt="@Model.AltText" />
 </div>
